// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFacetGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterMedium testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiFacetGroup props gutterSize l is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterLarge"
/>
`;

exports[`OuiFacetGroup props gutterSize m is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterMedium"
/>
`;

exports[`OuiFacetGroup props gutterSize none is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterNone"
/>
`;

exports[`OuiFacetGroup props gutterSize s is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterSmall"
/>
`;

exports[`OuiFacetGroup props layout horizontal is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionRow ouiFlexGroup--responsive ouiFlexGroup--wrap ouiFacetGroup ouiFacetGroup--horizontal ouiFacetGroup--gutterMedium"
/>
`;

exports[`OuiFacetGroup props layout vertical is rendered 1`] = `
<div
  class="ouiFlexGroup ouiFlexGroup--directionColumn ouiFlexGroup--responsive ouiFacetGroup ouiFacetGroup--vertical ouiFacetGroup--gutterMedium"
/>
`;
